CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (InputManager)

LIST( APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake" )
INCLUDE( pch_support )

IF(CMAKE_EXE_LINKER_FLAGS EQUAL " /machine:x64 ")
	SET (ARCH "64")
ELSE()
	SET (ARCH "86")
ENDIF()

SET (CMAKE_C++_CREATE_STATIC_LIBRARY 1)
SET (INPUTMANAGER_SOURCE_DIR "${PROJECT_SOURCE_DIR}/source")
SET (INPUTMANAGER_PCH_SUBDIR ${INPUTMANAGER_SOURCE_DIR}/stdafx)
SET (INPUTMANAGER_PCH_NAME "stdafx")
SET (INPUTMANAGER_PCH_HEADER ${INPUTMANAGER_PCH_NAME}.h)
SET (INPUTMANAGER_PCH_CPP ${INPUTMANAGER_PCH_NAME}.cpp)
SET (INPUTMANAGER_PCH_BIN ${INPUTMANAGER_PCH_NAME}.pch)

SET(INPUTMANAGER_SOURCE_SUBDIRS
"Input"
"KeyboardInput"
"MouseInput"
"stdafx"
)

SET(INPUTMANAGER_SOURCE_FILES "")
FOREACH(subdir ${INPUTMANAGER_SOURCE_SUBDIRS})
	FILE(GLOB TEMP ${INPUTMANAGER_SOURCE_DIR}/${subdir}/*.cpp ${INPUTMANAGER_SOURCE_DIR}/${subdir}/*.h)
	SET(INPUTMANAGER_SOURCE_FILES ${INPUTMANAGER_SOURCE_FILES} ${TEMP})
ENDFOREACH()


FOREACH(source_file ${INPUTMANAGER_SOURCE_FILES})
ENDFOREACH()

ADD_LIBRARY (InputManager
${INPUTMANAGER_SOURCE_FILES}
)

FOREACH(subdir ${INPUTMANAGER_SOURCE_SUBDIRS})
    SOURCE_GROUP(${subdir} FILES ${INPUTMANAGER_SOURCE_DIR}/${subdir}/*.cpp ${INPUTMANAGER_SOURCE_DIR}/${subdir}/*.h)
	MESSAGE(${INPUTMANAGER_SOURCE_DIR}/${subdir}/)
ENDFOREACH()

INCLUDE_DIRECTORIES( ${INPUTMANAGER_SOURCE_DIR} )
INCLUDE_DIRECTORIES( ${INPUTMANAGER_PCH_SUBDIR} )

MSVC_SET_PCH(InputManager
${INPUTMANAGER_PCH_SUBDIR}/${INPUTMANAGER_PCH_HEADER}
${INPUTMANAGER_PCH_SUBDIR}/${INPUTMANAGER_PCH_CPP}
)
SET_TARGET_PROPERTIES(InputManager PROPERTIES LINKER_LANGUAGE C++)