CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
IF(NOT DEFINED PROJECT_NAME)
	SET(PROJECT_NAME "InputManager")
	PROJECT(${PROJECT_NAME})
ENDIF()

LIST( APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake" )
INCLUDE( pch_support )

IF(CMAKE_EXE_LINKER_FLAGS EQUAL " /machine:x64 ")
	SET (ARCH "64")
ELSE()
	SET (ARCH "86")
ENDIF()

IF(NOT DEFINED IM_ROOT_DIR)
	SET(IM_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
ENDIF()

#SET (CMAKE_C++_CREATE_STATIC_LIBRARY 1)
SET (IM_SOURCE_DIR "${IM_ROOT_DIR}/source")
SET (IM_PCH_SUBDIR ${IM_SOURCE_DIR}/stdafx)
SET (IM_PCH_NAME "stdafx")
SET (IM_PCH_HEADER ${IM_PCH_NAME}.h)
SET (IM_PCH_CPP ${IM_PCH_NAME}.cpp)
SET (IM_PCH_BIN ${IM_PCH_NAME}.pch)

SET(IM_SOURCE_SUBDIRS
"Input"
"KeyboardInput"
"MouseInput"
"stdafx"
)

SET(IM_SOURCE_FILES "")
FOREACH(subdir ${IM_SOURCE_SUBDIRS})
	FILE(GLOB TEMP ${IM_SOURCE_DIR}/${subdir}/*.cpp ${IM_SOURCE_DIR}/${subdir}/*.h)
	SET(IM_SOURCE_FILES ${IM_SOURCE_FILES} ${TEMP})
ENDFOREACH()

FOREACH(source_file ${IM_SOURCE_FILES})
ENDFOREACH()

ADD_LIBRARY (InputManager
${IM_SOURCE_FILES}
)

FOREACH(subdir ${IM_SOURCE_SUBDIRS})
    SOURCE_GROUP(${subdir} FILES ${IM_SOURCE_DIR}/${subdir}/*.cpp ${IM_SOURCE_DIR}/${subdir}/*.h)
ENDFOREACH()

INCLUDE_DIRECTORIES( ${IM_SOURCE_DIR} )
INCLUDE_DIRECTORIES( ${IM_PCH_SUBDIR} )

MSVC_SET_PCH(InputManager
${IM_PCH_SUBDIR}/${IM_PCH_HEADER}
${IM_PCH_SUBDIR}/${IM_PCH_CPP}
)
SET_TARGET_PROPERTIES(InputManager PROPERTIES LINKER_LANGUAGE C++)